[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemies/slime1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/slime2.png" type="Texture" id=2]
[ext_resource path="res://scripts/enemies/LargeSlime.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/healthbar_enemy_empty.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/healthbar_enemy_full.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/components/WeaknessDisplayComponent.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.2579, 25.7291 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "slimeanim",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 30.1289
height = 56.6416

[node name="LargeSlime" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.133955, -16.5889 )
shape = SubResource( 1 )

[node name="WeaknessDisplayComponent" parent="." instance=ExtResource( 6 )]
position = Vector2( -5, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -55.326 )
scale = Vector2( 8, 8 )
frames = SubResource( 2 )
animation = "death"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 28 )

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.595276, -19.5834 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -14 )

[node name="SpawnSlime1" type="Position2D" parent="."]
position = Vector2( -33.0729, -6.92957 )

[node name="SpawnSlime2" type="Position2D" parent="."]
position = Vector2( 32.443, -7.09474 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -44.8396
margin_top = -69.9651
margin_right = -14.8396
margin_bottom = -63.9651
rect_scale = Vector2( 3, 3 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
